# wire_sentinel

./: Cargo.toml  INSTALL-alpine.md  INSTALL-systemd.md  INSTALL.md  README.md  install.sh  wire-sentinel.toml  wire_sentinel.service
alpine/: install.sh  wire-sentinel
src/: actors.rs  address_change.rs  config.rs  gandi_net_livedns.rs  ip_monitor.pest  ip_monitor.rs  main.rs  messages.rs  parse_monitor.rs  wireguard_peer.rs
src/actors/: change_router.rs  gandi_updater.rs  ip_monitor.rs  mod.rs  wireguard_updater.rs
systemd/: install.sh  wire_sentinel.service
